--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,80 @@
-p {
-    color: aqua;
+@font-face {
+    font-family: 'Montserrat-Bold';
+    src: url('./Montserrat-Bold.ttf'), format('ttf');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat-Medium';
+    src: url('./Montserrat-Medium.ttf'), format('ttf');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat-Regular';
+    src: url('./Montserrat-Regular.ttf'), format('ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+.background--background-color {
+    height: 40rem;
+    width: 100%;
+    background: #0891b2;
+    transform: rotate(0deg);
+    -webkit-box-shadow: 0px 12px 29px -5px rgba(0,0,0,0.46); 
+box-shadow: 0px 12px 29px -5px rgba(0,0,0,0.46);   
+}
+
+header {
+    background-color: #0891b2;
+    justify-content: center;
+    height: 40rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+}
+
+.header--about {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
+    grid-template-rows: 1fr;
+}
+.header--about--photo {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: white;
+    grid-column: 2;
+    height: 70%;
+    width: 100%;
+    -webkit-box-shadow: 0px 12px 29px -5px rgba(0,0,0,0.46); 
+    box-shadow: 0px 12px 29px -5px rgba(0,0,0,0.46);
+    background: url('./man.jpg');
+}
+
+.header--about--text {
+    margin-top: 6rem;
+    background-color: white;
+    width: 100%;
+    height: 50%;
+    -webkit-box-shadow: 5px 6px 7px 0px rgba(0,0,0,0.24); 
+    box-shadow: 5px 6px 7px 0px rgba(0,0,0,0.24);
+}
+
+.header--about--text--p {
+    font-family: 'Montserrat-Regular';
+
+}
+
+h1 {
+    font-family: 'Montserrat-Bold';
+}
+
+.portfolio-icon {
+    width: 25px;
+    height: 25px;
 }
